[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/victory.gd" id="1"]

[node name="Victory" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 96.0
offset_right = -96.0
offset_bottom = -96.0
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
theme_override_constants/separation = 32

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1
size_flags_horizontal = 1

[node name="CompletedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Completed Areas: 0"
horizontal_alignment = 1
size_flags_horizontal = 1

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
alignment = 1
size_flags_horizontal = 3
theme_override_constants/separation = 24

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
text = "Reset Run"
size_flags_horizontal = 3

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
text = "Credits"
visible = false
disabled = true
size_flags_horizontal = 3

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
text = "Menu"
size_flags_horizontal = 3
